# virtual-hid-bridge

./: .gitignore  CMakeLists.txt  README.md  vhid.entitlements
docs/: architecture.md  handoff.md  protocol.md
examples/: send_demo.py
include/vhid/: haptics.h  hid_profile.h  hid_source_decoder.h  mapping.h  physical_hid_source.h  protocol.h  source_codec.h  source_output_codec.h  wire.h
src/: generic_hid_profile.cpp  haptics.cpp  haptics_probe.cpp  hid_source_decoder.cpp  main.cpp  mapping.cpp  physical_hid_source_macos.mm  protocol.cpp  source_codec.cpp  source_output_codec.cpp  switch2_pro_profile.cpp  switch_pro_profile.cpp  ui_app.mm  virtual_device_macos.mm
tests/: core_tests.cpp  wire_c_tests.c
